# OrchestraChess

./: .gitignore  Cargo.toml  LICENSE  dummy.pgn  eda.ipynb  example_tree.json  file_edit.py  file_edit2.py  orchestra_rust.sh  readme.md  sort_and_cut.py  tree.json.dvc
.dvc/: config
opening_book_processing/: file_edit.py  file_edit1.5.py  file_edit2.py  pgn_to_algebraic.py  process_book.py  remove_short_games.py
python_prototype/: README.md  attack_bitboard.py  bitboard.py  board.py  board_bitboard.py  board_plan.py  constants.py  engine.py  helpers.py  main.py  move.py  orchestradirector.py  pyproject.toml  tests.py  timer.py
self_play_test/: book_expl.py  data_move_ordering.txt  data_search.txt  spt.py
src/: accumulator.rs  board.rs  book.rs  constants.rs  engine.rs  evaluation.rs  helpers.rs  magic.rs  main.rs  move.rs  move_heuristic.rs  move_manager.rs  muve.rs  orchestradirector.rs  timer.rs  tree.rs  utils.rs  zobrist.rs  zobrist_impl.rs
src/NNUE/: architecture.rs  feature_transformer.rs  layer_affine_transform.rs  layer_affine_transform_sparse.rs  layer_clipped_relu.rs  layer_sqr_clipped_relu.rs  mod.rs  nnue.rs
src/nnue/: architecture.rs  feature_transformer.rs  layer_affine_transform.rs  layer_affine_transform_sparse.rs  layer_clipped_relu.rs  layer_sqr_clipped_relu.rs  leb128.rs  mod.rs  nnue.rs  read_utilities.rs
src/tests/: benchmark.rs  benchmark_test.rs  mod.rs  move_gen_test.rs
