[tool.poetry]
name = "chess-bot"
version = "0.1.0"
description = ""
authors = ["MattiaSC01, DarioFi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
